todo List js under process

--- a/02- todo-list/index.html
+++ b/02- todo-list/index.html
@@ -16,17 +16,13 @@
 
      <main>
        <section class="todo-list-action-container">
-          <input class="todo-text-css todo-text-js" type="text">
+          <input class="todo-text-css todo-text-js" type="text" placeholder="todo name">
           <input class="todo-date-css todo-date-js" type="date">
           <button class="btn-add-todo-css btn-add-todo-js">add</button>
        </section>
 
        <section class="todo-list-display-container">
-        <article class="todo-list-container">
-            <p class="todo-text-display-css todo-text-display-js">keerti kumar shakya</p>
-            <p class="todo-date-display-css todo-date-display-js">11-12-2024</p>
-            <button class="todo-delete-css todo-delete-css">delete</button>
-        </article>
+      
        </section>
      </main>
   </body>
