search part of todo list completed

--- a/02- todo-list/index.html
+++ b/02- todo-list/index.html
@@ -11,7 +11,19 @@
     <header>
       <img class="todo-list-image" src="./images/todo-img.jpg" alt="">
     <h1>todo list</h1>
-    <input class="search-todo-css search-todo-js" type="search" placeholder="search">
+
+    <div class="search-main-container">
+
+    <div class="search-container">
+      <input class="search-todo-css search-todo-js" type="search" placeholder="search">
+      <button class="search-btn-css search-btn-js">
+        <img class="search-img-css" src="./images/search.png" alt="">
+      </button>
+    </div>
+    <div class="search-display-css js-search-display">
+      
+    </div>
+  </div>
     </header>
 
      <main>
