menu app completed

--- a/04 - Menu app/index.html
+++ b/04 - Menu app/index.html
@@ -8,6 +8,37 @@
     <script src="./script.js" defer></script>
   </head>
     <body>
-      
+
+      <header class="header-container">
+        <h1 class="heading">our menu</h1>
+        <div class="underline"></div>
+      </header>
+
+      <section class="menu-category-btn-container">
+        <button class="btn-category" data-id="">dinner</button>
+        <button class="btn-category" data-id="">dinner</button>
+      </section>
+
+      <main class="menu-container">
+
+        <article class="single-menu-container">
+
+          <img class="image" src="./images/item-1.jpeg" alt="">
+          <div class="menu-item-des-container">
+
+            <div class="name-price-container">
+              <div class="name">Buttermilk Pancakes</div>
+              <div class="price">$15.99</div>
+            </div>
+
+            <p class="desc">
+              I'm baby woke mlkshk wolf bitters live-edge blue bottle, hammock freegan copper mug whatever cold-pressed
+            </p>
+
+          </div>
+
+        </article>
+
+      </main>
     </body>
 </html>
